--- a/DockerFile
+++ b/DockerFile
@@ -1,25 +1,22 @@
-# Use a imagem base oficial do .NET para ASP.NET Core 6.0
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
-WORKDIR /app
-EXPOSE 80
-
-# Use a imagem base oficial do .NET SDK para compilar a aplicação
+# Usando a imagem oficial do .NET 6.0 SDK para buildar a aplicação
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-WORKDIR /src
+WORKDIR /app
 
-# Copie os arquivos do projeto
-COPY . .
-
-# Restaura as dependências
+# Copiar o arquivo .csproj e restaurar as dependências
+COPY *.csproj ./
 RUN dotnet restore
 
-# Compila a aplicação em modo Release
-RUN dotnet publish -c Release -o /app
+# Copiar o restante dos arquivos e buildar a aplicação
+COPY . ./
+RUN dotnet publish -c Release -o /out
 
-# Passa para o estágio final com a imagem base do ASP.NET Core 6.0
-FROM base AS final
+# Usando a imagem runtime do .NET para rodar a aplicação
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS runtime
 WORKDIR /app
-COPY --from=build /app .
+COPY --from=build /out .
 
-# Comando para iniciar a aplicação
+# Expor a porta padrão
+EXPOSE 80
+
+# Definir o ponto de entrada da aplicação
 ENTRYPOINT ["dotnet", "LanchesMac.dll"]
